syntax = "proto3";
import "gorm/v2/options.proto";
package options;
option go_package = "github.com/complex64/protoc-gen-gorm/cmd/protoc-gen-gorm/test/options";

// Exercise all options types:

option (gorm.v2.file) = {
  // Fields not set implies a default of `false`.
};

message MyMessage {
  option (gorm.v2.message) = {
    // Fields not set imply a default of `false`.
  };

  string field_1 = 1 [
    // No field options defined yet.
    (gorm.v2.field) = {}
  ];

  oneof oneof {
    // No oneof options defined yet.
    option (gorm.v2.oneof) = {};

    string field_2 = 2;
    int32 field_3 = 3;
  }
}

enum MyEnum {
  // No enum options defined yet.
  option (gorm.v2.enum) = {};

  MY_ENUM_UNSPECIFIED = 0 [
    // No enum value options defined yet.
    (gorm.v2.enum_value) = {}
  ];
}

service MyService {
  // No service options defined yet.
  option (gorm.v2.service) = {};

  rpc MyMethod(MyMethodRequest) returns (MyMethodResponse) {
    // No method options defined yet.
    option (gorm.v2.method) = {};
  }
}

message MyMethodRequest{}
message MyMethodResponse{}
